@@ -9,4 +9,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
 }
 
+test {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
 group = 'com.github.gliptak.jallele'
